matter/extensions/http/generated/httpParser.py
# Generated from http.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class httpParser ( Parser ):

    grammarFileName = "http.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'GET'", "'HEAD'", "'POST'", "'PUT'", 
                     "'DELETE'", "'CONNECT'", "'OPTIONS'", "'TRACE'", "'HTTP/'", 
                     "' '", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "';'", "'='", "','", "'\n'", "'-'", "'.'", 
                     "'_'", "'~'", "'?'", "'/'", "'!'", "':'", "'@'", "'$'", 
                     "'#'", "'&'", "'%'", "'''", "'*'", "'+'", "'^'", "'`'", 
                     "'|'", "<INVALID>", "'\t'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SP", "ALPHA", "DIGIT", 
                      "Pct_encoded", "HEXDIG", "LColumn", "RColumn", "SemiColon", 
                      "Equals", "Period", "CRLF", "Minus", "Dot", "Underscore", 
                      "Tilde", "QuestionMark", "Slash", "ExclamationMark", 
                      "Colon", "At", "DollarSign", "Hashtag", "Ampersand", 
                      "Percent", "SQuote", "Star", "Plus", "Caret", "BackQuote", 
                      "VBar", "OWS", "HTAB", "VCHAR", "OBS_TEXT" ]

    RULE_http_message = 0
    RULE_start_line = 1
    RULE_request_line = 2
    RULE_method = 3
    RULE_request_target = 4
    RULE_origin_form = 5
    RULE_absolute_path = 6
    RULE_segment = 7
    RULE_query = 8
    RULE_http_version = 9
    RULE_http_name = 10
    RULE_header_field = 11
    RULE_field_name = 12
    RULE_token = 13
    RULE_field_value = 14
    RULE_field_content = 15
    RULE_field_vchar = 16
    RULE_obs_text = 17
    RULE_obs_fold = 18
    RULE_pchar = 19
    RULE_unreserved = 20
    RULE_sub_delims = 21
    RULE_tchar = 22
    RULE_vCHAR = 23

    ruleNames =  [ "http_message", "start_line", "request_line", "method", 
                   "request_target", "origin_form", "absolute_path", "segment", 
                   "query", "http_version", "http_name", "header_field", 
                   "field_name", "token", "field_value", "field_content", 
                   "field_vchar", "obs_text", "obs_fold", "pchar", "unreserved", 
                   "sub_delims", "tchar", "vCHAR" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    SP=10
    ALPHA=11
    DIGIT=12
    Pct_encoded=13
    HEXDIG=14
    LColumn=15
    RColumn=16
    SemiColon=17
    Equals=18
    Period=19
    CRLF=20
    Minus=21
    Dot=22
    Underscore=23
    Tilde=24
    QuestionMark=25
    Slash=26
    ExclamationMark=27
    Colon=28
    At=29
    DollarSign=30
    Hashtag=31
    Ampersand=32
    Percent=33
    SQuote=34
    Star=35
    Plus=36
    Caret=37
    BackQuote=38
    VBar=39
    OWS=40
    HTAB=41
    VCHAR=42
    OBS_TEXT=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Http_messageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def start_line(self):
            return self.getTypedRuleContext(httpParser.Start_lineContext,0)


        def CRLF(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.CRLF)
            else:
                return self.getToken(httpParser.CRLF, i)

        def header_field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(httpParser.Header_fieldContext)
            else:
                return self.getTypedRuleContext(httpParser.Header_fieldContext,i)


        def getRuleIndex(self):
            return httpParser.RULE_http_message

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHttp_message" ):
                return visitor.visitHttp_message(self)
            else:
                return visitor.visitChildren(self)




    def http_message(self):

        localctx = httpParser.Http_messageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_http_message)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.start_line()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << httpParser.ALPHA) | (1 << httpParser.DIGIT) | (1 << httpParser.Minus) | (1 << httpParser.Dot) | (1 << httpParser.Underscore) | (1 << httpParser.Tilde) | (1 << httpParser.ExclamationMark) | (1 << httpParser.DollarSign) | (1 << httpParser.Hashtag) | (1 << httpParser.Ampersand) | (1 << httpParser.Percent) | (1 << httpParser.SQuote) | (1 << httpParser.Star) | (1 << httpParser.Plus) | (1 << httpParser.Caret) | (1 << httpParser.BackQuote) | (1 << httpParser.VBar))) != 0):
                self.state = 49
                self.header_field()
                self.state = 50
                self.match(httpParser.CRLF)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(httpParser.CRLF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_lineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def request_line(self):
            return self.getTypedRuleContext(httpParser.Request_lineContext,0)


        def getRuleIndex(self):
            return httpParser.RULE_start_line

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_line" ):
                return visitor.visitStart_line(self)
            else:
                return visitor.visitChildren(self)




    def start_line(self):

        localctx = httpParser.Start_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.request_line()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Request_lineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method(self):
            return self.getTypedRuleContext(httpParser.MethodContext,0)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.SP)
            else:
                return self.getToken(httpParser.SP, i)

        def request_target(self):
            return self.getTypedRuleContext(httpParser.Request_targetContext,0)


        def http_version(self):
            return self.getTypedRuleContext(httpParser.Http_versionContext,0)


        def CRLF(self):
            return self.getToken(httpParser.CRLF, 0)

        def getRuleIndex(self):
            return httpParser.RULE_request_line

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequest_line" ):
                return visitor.visitRequest_line(self)
            else:
                return visitor.visitChildren(self)




    def request_line(self):

        localctx = httpParser.Request_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_request_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.method()
            self.state = 62
            self.match(httpParser.SP)
            self.state = 63
            self.request_target()
            self.state = 64
            self.match(httpParser.SP)
            self.state = 65
            self.http_version()
            self.state = 66
            self.match(httpParser.CRLF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return httpParser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = httpParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << httpParser.T__0) | (1 << httpParser.T__1) | (1 << httpParser.T__2) | (1 << httpParser.T__3) | (1 << httpParser.T__4) | (1 << httpParser.T__5) | (1 << httpParser.T__6) | (1 << httpParser.T__7))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Request_targetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def origin_form(self):
            return self.getTypedRuleContext(httpParser.Origin_formContext,0)


        def getRuleIndex(self):
            return httpParser.RULE_request_target

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequest_target" ):
                return visitor.visitRequest_target(self)
            else:
                return visitor.visitChildren(self)




    def request_target(self):

        localctx = httpParser.Request_targetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_request_target)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.origin_form()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Origin_formContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def absolute_path(self):
            return self.getTypedRuleContext(httpParser.Absolute_pathContext,0)


        def QuestionMark(self):
            return self.getToken(httpParser.QuestionMark, 0)

        def query(self):
            return self.getTypedRuleContext(httpParser.QueryContext,0)


        def getRuleIndex(self):
            return httpParser.RULE_origin_form

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrigin_form" ):
                return visitor.visitOrigin_form(self)
            else:
                return visitor.visitChildren(self)




    def origin_form(self):

        localctx = httpParser.Origin_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_origin_form)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.absolute_path()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==httpParser.QuestionMark:
                self.state = 73
                self.match(httpParser.QuestionMark)
                self.state = 74
                self.query()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Absolute_pathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Slash(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.Slash)
            else:
                return self.getToken(httpParser.Slash, i)

        def segment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(httpParser.SegmentContext)
            else:
                return self.getTypedRuleContext(httpParser.SegmentContext,i)


        def getRuleIndex(self):
            return httpParser.RULE_absolute_path

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbsolute_path" ):
                return visitor.visitAbsolute_path(self)
            else:
                return visitor.visitChildren(self)




    def absolute_path(self):

        localctx = httpParser.Absolute_pathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_absolute_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.match(httpParser.Slash)
                self.state = 78
                self.segment()
                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==httpParser.Slash):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SegmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pchar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(httpParser.PcharContext)
            else:
                return self.getTypedRuleContext(httpParser.PcharContext,i)


        def getRuleIndex(self):
            return httpParser.RULE_segment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSegment" ):
                return visitor.visitSegment(self)
            else:
                return visitor.visitChildren(self)




    def segment(self):

        localctx = httpParser.SegmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_segment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << httpParser.ALPHA) | (1 << httpParser.DIGIT) | (1 << httpParser.Pct_encoded) | (1 << httpParser.LColumn) | (1 << httpParser.RColumn) | (1 << httpParser.SemiColon) | (1 << httpParser.Equals) | (1 << httpParser.Period) | (1 << httpParser.Minus) | (1 << httpParser.Dot) | (1 << httpParser.Underscore) | (1 << httpParser.Tilde) | (1 << httpParser.ExclamationMark) | (1 << httpParser.Colon) | (1 << httpParser.At) | (1 << httpParser.DollarSign) | (1 << httpParser.Ampersand) | (1 << httpParser.SQuote) | (1 << httpParser.Star) | (1 << httpParser.Plus))) != 0):
                self.state = 83
                self.pchar()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pchar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(httpParser.PcharContext)
            else:
                return self.getTypedRuleContext(httpParser.PcharContext,i)


        def Slash(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.Slash)
            else:
                return self.getToken(httpParser.Slash, i)

        def QuestionMark(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.QuestionMark)
            else:
                return self.getToken(httpParser.QuestionMark, i)

        def getRuleIndex(self):
            return httpParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = httpParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << httpParser.ALPHA) | (1 << httpParser.DIGIT) | (1 << httpParser.Pct_encoded) | (1 << httpParser.LColumn) | (1 << httpParser.RColumn) | (1 << httpParser.SemiColon) | (1 << httpParser.Equals) | (1 << httpParser.Period) | (1 << httpParser.Minus) | (1 << httpParser.Dot) | (1 << httpParser.Underscore) | (1 << httpParser.Tilde) | (1 << httpParser.QuestionMark) | (1 << httpParser.Slash) | (1 << httpParser.ExclamationMark) | (1 << httpParser.Colon) | (1 << httpParser.At) | (1 << httpParser.DollarSign) | (1 << httpParser.Ampersand) | (1 << httpParser.SQuote) | (1 << httpParser.Star) | (1 << httpParser.Plus))) != 0):
                self.state = 92
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [httpParser.ALPHA, httpParser.DIGIT, httpParser.Pct_encoded, httpParser.LColumn, httpParser.RColumn, httpParser.SemiColon, httpParser.Equals, httpParser.Period, httpParser.Minus, httpParser.Dot, httpParser.Underscore, httpParser.Tilde, httpParser.ExclamationMark, httpParser.Colon, httpParser.At, httpParser.DollarSign, httpParser.Ampersand, httpParser.SQuote, httpParser.Star, httpParser.Plus]:
                    self.state = 89
                    self.pchar()
                    pass
                elif token in [httpParser.Slash]:
                    self.state = 90
                    self.match(httpParser.Slash)
                    pass
                elif token in [httpParser.QuestionMark]:
                    self.state = 91
                    self.match(httpParser.QuestionMark)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Http_versionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def http_name(self):
            return self.getTypedRuleContext(httpParser.Http_nameContext,0)


        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.DIGIT)
            else:
                return self.getToken(httpParser.DIGIT, i)

        def Dot(self):
            return self.getToken(httpParser.Dot, 0)

        def getRuleIndex(self):
            return httpParser.RULE_http_version

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHttp_version" ):
                return visitor.visitHttp_version(self)
            else:
                return visitor.visitChildren(self)




    def http_version(self):

        localctx = httpParser.Http_versionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_http_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.http_name()
            self.state = 98
            self.match(httpParser.DIGIT)
            self.state = 99
            self.match(httpParser.Dot)
            self.state = 100
            self.match(httpParser.DIGIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Http_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return httpParser.RULE_http_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHttp_name" ):
                return visitor.visitHttp_name(self)
            else:
                return visitor.visitChildren(self)




    def http_name(self):

        localctx = httpParser.Http_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_http_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(httpParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Header_fieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_name(self):
            return self.getTypedRuleContext(httpParser.Field_nameContext,0)


        def Colon(self):
            return self.getToken(httpParser.Colon, 0)

        def field_value(self):
            return self.getTypedRuleContext(httpParser.Field_valueContext,0)


        def OWS(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.OWS)
            else:
                return self.getToken(httpParser.OWS, i)

        def getRuleIndex(self):
            return httpParser.RULE_header_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader_field" ):
                return visitor.visitHeader_field(self)
            else:
                return visitor.visitChildren(self)




    def header_field(self):

        localctx = httpParser.Header_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_header_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.field_name()
            self.state = 105
            self.match(httpParser.Colon)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==httpParser.OWS:
                self.state = 106
                self.match(httpParser.OWS)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.field_value()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==httpParser.OWS:
                self.state = 113
                self.match(httpParser.OWS)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def token(self):
            return self.getTypedRuleContext(httpParser.TokenContext,0)


        def getRuleIndex(self):
            return httpParser.RULE_field_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_name" ):
                return visitor.visitField_name(self)
            else:
                return visitor.visitChildren(self)




    def field_name(self):

        localctx = httpParser.Field_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_field_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.token()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TokenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tchar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(httpParser.TcharContext)
            else:
                return self.getTypedRuleContext(httpParser.TcharContext,i)


        def getRuleIndex(self):
            return httpParser.RULE_token

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToken" ):
                return visitor.visitToken(self)
            else:
                return visitor.visitChildren(self)




    def token(self):

        localctx = httpParser.TokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_token)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 121
                self.tchar()
                self.state = 124 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << httpParser.ALPHA) | (1 << httpParser.DIGIT) | (1 << httpParser.Minus) | (1 << httpParser.Dot) | (1 << httpParser.Underscore) | (1 << httpParser.Tilde) | (1 << httpParser.ExclamationMark) | (1 << httpParser.DollarSign) | (1 << httpParser.Hashtag) | (1 << httpParser.Ampersand) | (1 << httpParser.Percent) | (1 << httpParser.SQuote) | (1 << httpParser.Star) | (1 << httpParser.Plus) | (1 << httpParser.Caret) | (1 << httpParser.BackQuote) | (1 << httpParser.VBar))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(httpParser.Field_contentContext)
            else:
                return self.getTypedRuleContext(httpParser.Field_contentContext,i)


        def obs_fold(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(httpParser.Obs_foldContext)
            else:
                return self.getTypedRuleContext(httpParser.Obs_foldContext,i)


        def getRuleIndex(self):
            return httpParser.RULE_field_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_value" ):
                return visitor.visitField_value(self)
            else:
                return visitor.visitChildren(self)




    def field_value(self):

        localctx = httpParser.Field_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_field_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 128
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [httpParser.ALPHA, httpParser.DIGIT, httpParser.VCHAR, httpParser.OBS_TEXT]:
                        self.state = 126
                        self.field_content()
                        pass
                    elif token in [httpParser.CRLF]:
                        self.state = 127
                        self.obs_fold()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 130 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_vchar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(httpParser.Field_vcharContext)
            else:
                return self.getTypedRuleContext(httpParser.Field_vcharContext,i)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.SP)
            else:
                return self.getToken(httpParser.SP, i)

        def HTAB(self, i:int=None):
            if i is None:
                return self.getTokens(httpParser.HTAB)
            else:
                return self.getToken(httpParser.HTAB, i)

        def getRuleIndex(self):
            return httpParser.RULE_field_content

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_content" ):
                return visitor.visitField_content(self)
            else:
                return visitor.visitChildren(self)




    def field_content(self):
